--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
     <p>Are you younger than 50?</p>
-    <input type="radio" id="age" name="Age" value="Yes">
+    <input type="radio" id="age" name="age" value="Yes">
     <label for="Yes">Yes</label><br>
-    <input type="radio" id="age" name="Age" value="No">
+    <input type="radio" id="age" name="age" value="No">
     <label for="No">No</label><br>
 
     <p>Do you play any sports</p>
